# SlenderProject

./: .gitignore  CMakeLists.txt  README.md  teste
images/: scene.gltf
include/: BoundingBox.h  Box.h  Camera.h  CollidableBody.h  CollidingManager.h  CollisionBox.h  FileSystem.h  Flashlight.h  Light.h  Mesh.h  Model.h  ModelHelper - Cópia.h  ModelHelper.h  Moonlight.h  Obstacles.h  Papers.h  Player.h  ProcessInput.h  Shader.h  Slender.h  Texture.h  Tree.h  World.h  gameSettings.h  stb_image.h
shaders/: defaultLightFS.txt  defaultLightVS.txt  fsCube.txt  fsPaperCoord.txt  fsSuit.txt  shader.fs.txt  shader.vs.txt  slenderman.fs.txt  vsBall.txt  vsCube.txt  vsObj.txt  vsPlayer1.txt  vsPlayer2.txt  vsSuit.txt
src/: Camera.cpp  CollisionBox.cpp  Flashlight.cpp  Mesh.cpp  Model.cpp  Moonlight.cpp  Obstacles.cpp  Papers.cpp  Player.cpp  ProcessInput.cpp  Slender.cpp  Texture.cpp  Tree.cpp  World.cpp  gameSettings.cpp  main.cc
